# pentaledger

./: .env.template  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile.in  README.md  SECURITY.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  pull_request_temmplate.md
.github/ISSUE_TEMPLATE/workflows/: docker-ui.yml
.github/workflows/: auto-assign.yml  build-docs.yml  build.yml  docker-api-server.yml  docker-ui.yml  release.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
db/: README.md
db/migrations/: 20240429000000_initial_schema.sql  20240430000000_add_gambling_log.sql  20240430000001_add_vehicle_mileage.sql
desktop/: CMakeLists.txt
desktop/include/: main_frame.h
desktop/src/: main.cpp  main_frame.cpp
docs/formulas/source/: index.rst  payroll.rst
docs/specification/source/: company.rst  conf.py  gambling.rst  index.rst  investments.rst  vehicles.rst
documentation/: README.md
documentation/specification/source/: coa.rst  company.rst  corporation.rst  formulas.rst  gambling.rst  history.rst  index.rst  individual.rst  introduction.rst  investments.rst  vehicles.rst  vendor.rst
lib/: CMakeLists.txt
lib/include/pentaledger/: company.hpp  database.hpp  pentaledger.hpp
lib/include/pentaledger/Doxyments/: Design.hpp  MainPage.hpp
lib/include/pentaledger/accounting/: account_types.hpp  chart_of_accounts.hpp  entity_types.hpp
lib/include/pentaledger/accounting/analysis/: cash_runway.hpp
lib/include/pentaledger/accounting/marketplace/: market_provider.hpp
lib/include/pentaledger/accounting/payroll/: Employee.hpp  FUTA.hpp  FilingStatus.hpp  OSADI.hpp  PayClassification.hpp  PayPeriods.hpp  W4.hpp  mn_witholding.hpp  payroll.hpp
lib/include/pentaledger/accounting/tax/: NIIT.hpp  income_types.hpp  irs_contribution_limits.hpp
lib/include/pentaledger/amazon/: amazon_fees.hpp
lib/include/pentaledger/arch/: portable.h
lib/include/pentaledger/cdb/: cdata.h  datafile.h  db_errors.h  fileheader.h
lib/include/pentaledger/codec/: base64.hpp  codec.hpp
lib/include/pentaledger/converter/: ASCII_to_EBCDIC.hpp  EBCDIC_to_ASCII.hpp  base64.hpp  codec.hpp  converter.hpp
lib/include/pentaledger/date/: leap_year.hpp
lib/include/pentaledger/db/: company.hpp  database.hpp  gambling_log.hpp
lib/include/pentaledger/dox/: MainPage.dox  Namespaces.dox  RequirementsTracking.dox  RevHistory.dox
lib/include/pentaledger/gambling/: GamblingRecord.hpp  GamblingType.hpp
lib/include/pentaledger/inventory/: bin_location.hpp
lib/include/pentaledger/patterns/: Command.hpp  Observer.hpp  Singleton.hpp  Subject.hpp  Uncopyable.hpp
lib/include/pentaledger/transportation/: HOS_clocks.hpp  HOS_types.hpp  MileageCategories.hpp  US_states.hpp  driver_status.hpp  fuel_efficiency.hpp  fuel_types.hpp  irs_mileage_rates.hpp  operations_type.hpp  transportation.hpp  trip_types.hpp
lib/include/pentaledger/utility/: ASCII_to_EBCDIC.hpp  EBCDIC_to_ASCII.hpp  Environment.hpp  case.hpp  csv_parser.h  file_utilities.h  trim.hpp  wordwrap.h
lib/src/: database.cpp  pentaledger.cpp
lib/src/accounting/tax/: irs_contribution_limits.cpp
lib/src/cdb/: datafile.cpp
lib/src/converter/: ASCII_to_EBCDIC.cpp  base64.cpp
lib/src/db/: database.cpp
lib/src/transportation/: irs_mileage_rates.cpp
lib/src/utility/: csv_parser.cpp  wordwrap.cpp
server/: .env.sample  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  config.json  go.mod  go.sum
server/cmd/api/: companies.go  company.go  errors.go  healthcheck.go  helpers.go  main.go  middleware.go  routes.go  server.go  users.go
server/include/: pentaledger_server.hpp
server/internal/data/: company.go  models.go  users.go
server/internal/validator/: validator.go
server/migrations/: 000001_create_companies_table.down.sql  000001_create_companies_table.up.sql  000001_create_users_table.up.sql  000002_create_org_tables.down.sql  000002_create_org_tables.up.sql
server/src/: main.cpp  pentaledger_server.cpp
server/test/: check_endpoints.sh
tests/: CMakeLists.txt
tests/src/: pentaledger_tests.cpp
tests/src/accounting/: niit_test.cpp
tests/src/codec/: base64_test.cpp
tests/src/converter/: ascii_to_ebcdic_test.cpp
tests/src/date/: leap_year_test.cpp
tests/src/transportation/: fuel_efficiency_test.cpp
tests/src/utility/: csv_parser_test.cpp  environment_test.cpp  wordwrap_test.cpp
ui/: Dockerfile  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/conf/: nginx.conf
ui/src/lib/: Navbar.svelte  ProtectedRoute.svelte  RoleGuard.svelte  Sidebar.svelte  auth.ts  roles.ts
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/chart-of-accounts/: +page.svelte
ui/src/routes/companies/: +page.svelte
ui/src/routes/customers/: +page.svelte
ui/src/routes/debt-calculator/: +page.svelte
ui/src/routes/expenses/: +page.svelte
ui/src/routes/governance/: +page.svelte
ui/src/routes/invoices/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/payroll/: +page.svelte
ui/src/routes/profile/: +page.svelte
ui/src/routes/quotes/: +page.svelte
ui/src/routes/reports/: +page.svelte
ui/src/routes/settings/: +page.svelte
ui/src/routes/settings/user-management/: +page.svelte
ui/src/routes/settings/users/: +page.svelte
ui/src/routes/taxes/: +page.svelte
ui/src/routes/vehicles/: +page.svelte
ui/src/routes/vendors/: +page.svelte
